# log_pp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: configure.cmake  functions.cmake  options.cmake
examples/: CMakeLists.txt
examples/comptime_filter/: CMakeLists.txt  main.cpp
examples/local_logger/: CMakeLists.txt  main.cpp
examples/simple_logger/: CMakeLists.txt  main.cpp
examples/target_filter/: CMakeLists.txt  main.cpp
log_pp/: CMakeLists.txt
log_pp/include/: comptime_filter.hpp  kv.hpp  level.hpp  log.hpp  log_interface.hpp  metadata.hpp  record.hpp
log_pp/src/: CMakeLists.txt  log.cpp
tests/: CMakeLists.txt  compile_filter_release_fallback_test.cpp  compile_filter_test.cpp  kv_test.cpp  level_filter_test.cpp  level_test.cpp  macro_test.cpp
